--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue": "^2.6.11",
         "vue-cookie": "^1.1.4",
         "vue-core-video-player": "^0.2.0",
+        "vue-lazyload": "^1.3.3",
         "vue-meta": "^2.4.0",
         "vue-multiselect": "^2.1.6",
         "vue-persian-datetime-picker": "^2.10.3",
