--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-meta": "^2.4.0",
         "vue-multiselect": "^2.1.6",
         "vue-persian-datetime-picker": "^2.10.3",
+        "vue-pincode-input": "^0.4.0",
         "vue-router": "^3.2.0",
         "vue-slick-carousel": "^1.0.6",
         "vue-sliding-pagination": "^1.3.2",
